# outLine

./: CMakeLists.txt  TODO.md
confg/: conf.json
data/dict/: stop_words.utf8
include/: confg.hh  cutor.hh  dirScanner.hh  mySql4cpp.hh  pageLib.hh  pageLibPre.hh  parseRss.hh
src/: main.cc  mySql4cpp.cc  pageLib.cc  pageLibPre.cc  parseRss.cc  test.cc
